// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Archive/Components/WeatherBoard Five Days 1`] = `
<div>
  <div
    className=""
  >
    <div>
      <h2>
        Newquay
      </h2>
      <div>
        <div>
          Wed 21 October
        </div>
        <div />
        <div>
          13
           
          C
        </div>
        <div>
          14
           / 
          14
           
          C
        </div>
        <div>
          <i
            className="wi wi-day-rain"
          />
           
          Rain
        </div>
        <div />
        <div>
          <div>
            Wind
            : 
            <b>
              4
            </b>
             
            km/h
          </div>
          <div>
            Humidity
            : 
            <b>
              95
            </b>
             %
          </div>
        </div>
      </div>
    </div>
    <div>
      <i
        className="wi wi-day-rain"
      />
    </div>
  </div>
  <div>
    
    <div>
      <div>
        Wed 21 October
      </div>
      <i
        className="wi wi-day-rain"
      />
      <div>
        Rain
      </div>
      <div>
        14
         / 
        13
         
        C
      </div>
    </div>
    <div>
      <div>
        Wed 21 October
      </div>
      <i
        className="wi wi-day-rain"
      />
      <div>
        Rain
      </div>
      <div>
        14
         / 
        14
         
        C
      </div>
    </div>
    <div>
      <div>
        Wed 21 October
      </div>
      <i
        className="wi wi-cloudy"
      />
      <div>
        Clouds
      </div>
      <div>
        12
         / 
        12
         
        C
      </div>
    </div>
    <div>
      <div>
        Wed 21 October
      </div>
      <i
        className="wi wi-day-rain"
      />
      <div>
        Rain
      </div>
      <div>
        12
         / 
        12
         
        C
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Archive/Components/WeatherBoard Imperial 1`] = `
<div>
  <div
    className=""
  >
    <div>
      <h2>
        Newquay
      </h2>
      <div>
        <div>
          Wed 21 October
        </div>
        <div />
        <div>
          13
           
          F
        </div>
        <div>
          14
           / 
          14
           
          F
        </div>
        <div>
          <i
            className="wi wi-day-rain"
          />
           
          Rain
        </div>
        <div />
        <div>
          <div>
            Wind
            : 
            <b>
              4
            </b>
             
            mph
          </div>
          <div>
            Humidity
            : 
            <b>
              95
            </b>
             %
          </div>
        </div>
      </div>
    </div>
    <div>
      <i
        className="wi wi-day-rain"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Archive/Components/WeatherBoard Metric 1`] = `
<div>
  <div
    className=""
  >
    <div>
      <h2>
        Newquay
      </h2>
      <div>
        <div>
          Wed 21 October
        </div>
        <div />
        <div>
          13
           
          C
        </div>
        <div>
          14
           / 
          14
           
          C
        </div>
        <div>
          <i
            className="wi wi-day-rain"
          />
           
          Rain
        </div>
        <div />
        <div>
          <div>
            Wind
            : 
            <b>
              4
            </b>
             
            km/h
          </div>
          <div>
            Humidity
            : 
            <b>
              95
            </b>
             %
          </div>
        </div>
      </div>
    </div>
    <div>
      <i
        className="wi wi-day-rain"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Button Disabled 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <button
    className=""
    disabled={true}
  >
    Disabled
  </button>
</div>
`;

exports[`Storyshots Components/Button Disabled Small 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <button
    className=""
    disabled={true}
  >
    Disabled
  </button>
</div>
`;

exports[`Storyshots Components/Button Inject Bootstrap Class Name 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <p>
    Override button style by passing style object to style prop or by passing in a className string. To remove background color and pass in a bootstrap className, color need to be set to 'none'
  </p>
  <button
    className="btn btn-dark"
    disabled={false}
    label="Button"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Components/Button Inject Style 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <p>
    Override button style by passing style object to style prop or by passing in a className string. To remove background color and pass in a bootstrap className, color need to be set to 'none'
  </p>
  <button
    className=""
    disabled={false}
    label="Button"
    style={
      Object {
        "background": "linear-gradient(to right, orange , yellow, green, cyan, blue, violet)",
      }
    }
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Components/Button Primary 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <button
    className=""
    disabled={false}
  >
    Primary
  </button>
</div>
`;

exports[`Storyshots Components/Button Primary Small 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <button
    className=""
    disabled={false}
  >
    Primary
  </button>
</div>
`;

exports[`Storyshots Components/Button Secondary 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <button
    className=""
    disabled={false}
  >
    Secondary
  </button>
</div>
`;

exports[`Storyshots Components/Button Secondary Small 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <button
    className=""
    disabled={false}
  >
    Secondary
  </button>
</div>
`;

exports[`Storyshots Components/Card Active 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className=""
  >
    Active
  </div>
</div>
`;

exports[`Storyshots Components/Card Disabled 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className=""
  >
    Disabled
  </div>
</div>
`;

exports[`Storyshots Components/Card Primary 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className=""
  >
    Primary
  </div>
</div>
`;

exports[`Storyshots Components/Card Secondary 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className=""
  >
    Secondary
  </div>
</div>
`;

exports[`Storyshots Components/Checkbox Default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <label
    className=""
  >
    <p
      className=""
    >
      checkbox
    </p>
    <input
      disabled={false}
      type="checkbox"
    />
    <span
      className=""
    />
  </label>
</div>
`;

exports[`Storyshots Components/Checkbox Disabled 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <label
    className=""
  >
    <p
      className=""
    >
      disabled
    </p>
    <input
      disabled={true}
      type="checkbox"
    />
    <span
      className=""
    />
  </label>
</div>
`;

exports[`Storyshots Components/Checkbox With Classes 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <label
    className=""
    style={
      Object {
        "marginLeft": "100px",
      }
    }
  >
    <p
      className=""
      style={
        Object {
          "fontSize": "50px",
        }
      }
    >
      label
    </p>
    <input
      disabled={false}
      type="checkbox"
    />
    <span
      className=""
      style={
        Object {
          "backgroundColor": "yellow",
        }
      }
    />
    <p
      className=""
    >
      error error error error
    </p>
  </label>
</div>
`;

exports[`Storyshots Components/Checkbox With Error 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <label
    className=""
  >
    <p
      className=""
    >
      label
    </p>
    <input
      disabled={false}
      type="checkbox"
    />
    <span
      className=""
    />
    <p
      className=""
    >
      error error error error
    </p>
  </label>
</div>
`;

exports[`Storyshots Components/ChooseFarmMenuItem Active 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className=""
    style={
      Object {
        "cursor": "default",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "minHeight": "63px",
      }
    }
  >
    <div>
      <h5
        className=""
      >
        Farm name
      </h5>
      <p
        className=""
      >
        Owner name
      </p>
    </div>
    <div>
      <p
        className=""
      >
        48.77869
      </p>
      <p
        className=""
      >
        -123.707939
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ChooseFarmMenuItem Disabled 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className=""
    style={
      Object {
        "cursor": "default",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "minHeight": "63px",
      }
    }
  >
    <div>
      <h5
        className=""
      >
        Farm name
      </h5>
      <p
        className=""
      >
        Owner name
      </p>
    </div>
    <div>
      <p
        className=""
      >
        48.77869
      </p>
      <p
        className=""
      >
        -123.707939
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ChooseFarmMenuItem Secondary 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className=""
    style={
      Object {
        "cursor": "pointer",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "minHeight": "63px",
      }
    }
  >
    <div>
      <h5
        className=""
      >
        Farm name
      </h5>
      <p
        className=""
      >
        Owner name
      </p>
    </div>
    <div>
      <p
        className=""
      >
        547 Silly St
      </p>
      <p
        className=""
      >
        Toronto, ON
      </p>
      <p
        className=""
      >
        V0T 5Y6
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ChooseFarmMenuItem Secondary Without Owner Name 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className=""
    style={
      Object {
        "cursor": "pointer",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "minHeight": "63px",
      }
    }
  >
    <div>
      <h5
        className=""
      >
        Farm name
      </h5>
    </div>
    <div>
      <p
        className=""
      >
        547 Silly St
      </p>
      <p
        className=""
      >
        Toronto, ON
      </p>
      <p
        className=""
      >
        V0T 5Y6
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Footer One Button 1`] = `
<footer
  className=""
>
  <div>
    <button
      className=""
      disabled={false}
    >
      Button
    </button>
  </div>
</footer>
`;

exports[`Storyshots Components/Footer Two Buttons 1`] = `
<footer
  className=""
>
  <div>
    <button
      className=""
      disabled={false}
    >
      Button
    </button>
    <button
      className=""
      disabled={false}
    >
      Button
    </button>
  </div>
</footer>
`;

exports[`Storyshots Components/Navbar Signup Navbar 1`] = `
<div>
  <div>
    <img
      alt="Logo"
      onClick={[Function]}
      src="middle_logo.svg"
    />
  </div>
</div>
`;

exports[`Storyshots Components/OverlayTooltip Primary 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <style
    type="text/css"
  >
    .tooltip .arrow::before {
            border-bottom-color: var(--grey400);
            border-width: 0 10px 10px;
          }

          .tooltip-inner {
            background-color: var(--grey400);
            padding: 12px 16px;
            box-shadow: 2px 6px 12px rgba(102, 115, 138, 0.2);
            border-radius: 4px;
            text-align: left;
            max-width: 264px;
          }

          .tooltip {
            margin-top: 12px;
          }
          
          .arrow {
            transform: translateX(16px) !important;
          }
          
          undefined

  </style>
  <p
    className=""
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    Why are we asking this?
  </p>
</div>
`;

exports[`Storyshots Components/Radio Default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <label
    className=""
  >
    <p
      className=""
    >
      checkbox
    </p>
    <input
      disabled={false}
      type="radio"
    />
    <span
      className=""
    />
  </label>
</div>
`;

exports[`Storyshots Components/Radio Disabled 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <label
    className=""
  >
    <p
      className=""
    >
      disabled
    </p>
    <input
      disabled={true}
      type="radio"
    />
    <span
      className=""
    />
  </label>
</div>
`;

exports[`Storyshots Components/ReactSelect Default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <h5
    className=""
  >
    label
  </h5>
  <div
    className=" css-2b097c-container"
    onKeyDown={[Function]}
  >
    <div
      className=" css-wwjuoi-Control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className=" css-g1d714-ValueContainer"
      >
        <div
          className=" css-pr2hw8-Placeholder"
        >
          placeholder
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className=""
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="react-select-2-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className=" css-1hb7zxy-IndicatorsContainer"
      >
        <span
          className=" css-62wm9a-IndicatorSeparator"
        />
        <div
          aria-hidden="true"
          className=" css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <svg
            aria-hidden="true"
            className="css-6q0nyr-Svg"
            focusable="false"
            height={20}
            viewBox="0 0 20 20"
            width={20}
          >
            <path
              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className=" css-14sfozv-menu"
      onMouseDown={[Function]}
      onMouseMove={[Function]}
    >
      <div
        className=" css-4ljt47-MenuList"
      >
        <div
          className=" css-73h4bl-option"
          id="react-select-2-option-0"
          onClick={[Function]}
          onMouseMove={[Function]}
          onMouseOver={[Function]}
          tabIndex={-1}
        >
          Chocolate
        </div>
        <div
          className=" css-73h4bl-option"
          id="react-select-2-option-1"
          onClick={[Function]}
          onMouseMove={[Function]}
          onMouseOver={[Function]}
          tabIndex={-1}
        >
          Strawberry
        </div>
        <div
          className=" css-73h4bl-option"
          id="react-select-2-option-2"
          onClick={[Function]}
          onMouseMove={[Function]}
          onMouseOver={[Function]}
          tabIndex={-1}
        >
          Vanilla
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Typography Override 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <p
    style={
      Object {
        "textDecorationLine": "underline",
      }
    }
  >
    It is preferred to use style prop to override css styles such as margin. If you pass in style from a stylesheet using css loader, it is not guaranteed to work as stylesheet loading order is unpredictable
  </p>
  <h3
    className=""
    style={
      Object {
        "marginBottom": 0,
      }
    }
  >
    Title
  </h3>
  <h4
    className=""
    style={
      Object {
        "marginBottom": 0,
      }
    }
  >
    Semibold
  </h4>
  <h5
    className=""
    style={
      Object {
        "marginBottom": 0,
      }
    }
  >
    Label
  </h5>
  <span
    className=""
    style={
      Object {
        "marginBottom": 0,
      }
    }
  >
    Label with sm as prop
  </span>
  <p
    className=""
    style={
      Object {
        "marginBottom": 0,
      }
    }
  >
    Main
  </p>
  <p
    className=""
    style={
      Object {
        "marginBottom": 0,
      }
    }
  >
    Text
  </p>
  <p
    className=""
    style={
      Object {
        "marginBottom": 0,
      }
    }
  >
    Info
  </p>
  <p
    className=""
    style={
      Object {
        "marginBottom": 0,
      }
    }
  >
    Error
  </p>
  <p
    className=""
    style={
      Object {
        "marginBottom": 0,
      }
    }
  >
    Link
  </p>
  <p
    className=""
    style={
      Object {
        "marginBottom": 0,
      }
    }
  >
    Link
  </p>
</div>
`;

exports[`Storyshots Components/Typography Primary 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <h3
    className=""
  >
    Title
  </h3>
  <h4
    className=""
  >
    Semibold
  </h4>
  <h5
    className=""
  >
    Label
  </h5>
  <span
    className=""
  >
    Label with sm as prop
  </span>
  <p
    className=""
  >
    Main
  </p>
  <p
    className=""
  >
    Text
  </p>
  <p
    className=""
  >
    Info
  </p>
  <p
    className=""
  >
    Error
  </p>
  <p
    className=""
  >
    Link
  </p>
</div>
`;

exports[`Storyshots Components/WeatherBoard/PureWeatherBoard Rain 1`] = `
<div>
  <div>
    Vancouver
  </div>
  <div>
    Wed 16 September
  </div>
  <div>
    15ºC
  </div>
  <div>
    <i
      className="wi wi-day-rain"
    />
  </div>
  <div>
    Wind: 2 km/h
  </div>
  <div>
    Humidity: 31%
  </div>
</div>
`;

exports[`Storyshots Components/WeatherBoard/PureWeatherBoard Sunny 1`] = `
<div>
  <div>
    Vancouver
  </div>
  <div>
    Wed 16 September
  </div>
  <div>
    15ºC
  </div>
  <div>
    <i
      className="wi wi-day-sunny"
    />
  </div>
  <div>
    Wind: 2 km/h
  </div>
  <div>
    Humidity: 31%
  </div>
</div>
`;

exports[`Storyshots Components/WeatherBoard/WeatherBoardWrapper English 1`] = `null`;

exports[`Storyshots Components/WeatherBoard/WeatherBoardWrapper Espanol 1`] = `null`;

exports[`Storyshots Form/Intro/1-WelcomeScreen Primary 1`] = `
Array [
  <div
    className=""
  >
    <img
      alt="Welcome to LiteFarm"
      loading="lazy"
      src="signUp2.svg"
    />
  </div>,
  <footer
    className=""
    style={
      Object {
        "bottom": 0,
        "position": "sticky",
      }
    }
  >
    <div>
      <button
        className=""
        disabled={false}
        onClick={[Function]}
      >
        Let's get started
      </button>
    </div>
  </footer>,
]
`;

exports[`Storyshots Form/Intro/6-Outro Primary 1`] = `
Array [
  <div>
    <div>
      <div>
        <img
          src="outro.svg"
        />
        <div>
          <h3>
            And finally, let us show you a couple of important things!
          </h3>
        </div>
      </div>
    </div>
  </div>,
  <footer
    className=""
    style={
      Object {
        "bottom": "0",
        "position": "sticky",
      }
    }
  >
    <div>
      <button
        className=""
        disabled={false}
      >
        Go back
      </button>
      <button
        className=""
        disabled={false}
      >
        Finish
      </button>
    </div>
  </footer>,
]
`;

exports[`Storyshots Layout/Intro Primary 1`] = `
Array [
  <div
    className=""
  />,
  <footer
    className=""
    style={
      Object {
        "bottom": 0,
        "position": "sticky",
      }
    }
  >
    <div>
      <button
        className=""
        disabled={false}
      >
        Button
      </button>
    </div>
  </footer>,
]
`;

exports[`Storyshots Layout/Intro SVG 1`] = `
Array [
  <div
    className=""
  >
    <img
      alt="Welcome to LiteFarm"
      loading="lazy"
      src="signUp2.svg"
    />
  </div>,
  <footer
    className=""
    style={
      Object {
        "bottom": 0,
        "position": "sticky",
      }
    }
  >
    <div>
      <button
        className=""
        disabled={false}
      >
        Button
      </button>
    </div>
  </footer>,
]
`;

exports[`Storyshots Layout/Intro Two Button 1`] = `
Array [
  <div
    className=""
  />,
  <footer
    className=""
    style={
      Object {
        "bottom": 0,
        "position": "sticky",
      }
    }
  >
    <div>
      <button
        className=""
        disabled={false}
      >
        Button
      </button>
      <button
        className=""
        disabled={false}
      >
        Button
      </button>
    </div>
  </footer>,
]
`;
